@@ -22,7 +22,7 @@ docdir = $(datadir)\\doc\\$(SQLRELAY)
 licensedir = $(datadir)\\licenses\\$(SQLRELAY)
 EXAMPLEDIR = $(datadir)\\$(SQLRELAY)\\examples
 tmpdir = $(localstatedir)\\run\\$(SQLRELAY)
-cachedir = $(tmpdir)\\cache
+cachedir = $(localstatedir)\\cache\\$(SQLRELAY)
 logdir = $(localstatedir)\\log\\$(SQLRELAY)
 debugdir = $(logdir)\\debug
 initscript_prefix = @initscript_prefix@
