@@ -18,6 +18,7 @@
 		indicate that the db is up
 	changed mode of listener-connection sockets to 700 from 711
 	moved .../var/sqlrelay/log to .../var/log/sqlrelay
+	moved .../var/sqlrelay/cache to .../var/cache/sqlrelay
 
 1.0.0 - updated md5 pwdenc to use rudiments md5 class
 	solved a long-standing hang that could occur if the database password
